%% HabitQuest v2.0.0 — modèle de données
classDiagram
  direction LR

  class UserRole {
    <<enumeration>>
    USER
    ADMIN
  }

  class QuestKind {
    <<enumeration>>
    daily
    weekly
    progression
    event
  }

  class UserQuestStatus {
    <<enumeration>>
    in_progress
    completed
    expired
  }

  class AchievementCode {
    <<enumeration>>
    first_quest_validated
    first_monster_kill
    iron_discipline
  }

  class User {
    +int id
    +string email
    +string password
    +int xp
    +int gold
    +UserRole role
    +int currentStreak
    +int longestStreak
    +string lastStreakDate
  }

  class Stat {
    +int id
    +int force
    +int intelligence
    +int discipline
    +int creativity
  }

  class QuestTemplate {
    +int id
    +QuestKind kind
    +string title
    +string description
    +bool isActive
    +int xpReward
    +int baseDamage
    +int requiredLevel
  }

  class QuestCondition {
    +int id
    +string kind
    +json params
  }

  class QuestReward {
    +int id
    +int xp
    +int gold
    +json params
  }

  class UserQuest {
    +int id
    +UserQuestStatus status
    +bool isValidated
    +DateTime startedAt
    +DateTime completedAt
    +json progress
  }

  class UserQuestActionLog {
    +int id
    +string comment
    +DateTime actionAt
  }

  class Event {
    +int id
    +DateTime startsAt
    +DateTime endsAt
    +int xpReward
    +json bonusRules
  }

  class EventQuestSelection {
    +int eventId
    +int questTemplateId
  }

  class Notification {
    +int id
    +string title
    +string body
    +DateTime createdAt
    +DateTime readAt
  }

  class Item {
    +int id
    +string name
    +string rarity
    +bool isSellable
    +int shopPrice
    +int bonusDamage
    +int bonusDamagePercent
  }

  class Inventory {
    +int id
    +bool isEquipped
    +int equipSlot
  }

  class MonsterTemplate {
    +int id
    +string name
    +int baseHp
    +int bossLevel
    +int levelMin
    +int levelMax
    +json lootTable
  }

  class MonsterSequenceStep {
    +int stepOrder
    +int monsterTemplateId
  }

  class UserMonster {
    +int id
    +int currentHp
    +int bossLevel
    +bool isActive
  }

  class Achievement {
    +int id
    +AchievementCode code
    +string name
    +string description
  }

  class UserAchievement {
    +int id
    +DateTime unlockedAt
  }

  class ShopPurchase {
    +int id
    +string rotationDate
    +DateTime purchasedAt
  }

  class Category {
    +int id
    +string name
    +string linkedStat
  }

  class Habit {
    +int id
    +string name
    +int xpReward
    +bool isActive
  }

  class HabitLog {
    +int id
    +int xpEarned
    +int goldEarned
    +DateTime loggedAt
  }

  User "1" --> "1" Stat : owns
  User "1" --> "0..*" UserQuest : has
  QuestTemplate "1" --> "0..*" UserQuest : instantiates
  QuestTemplate "1" --> "0..*" QuestCondition : has
  QuestTemplate "0..1" --> "1" QuestReward : reward

  User "1" --> "0..*" UserQuestActionLog : performs
  UserQuest "1" --> "0..*" UserQuestActionLog : logs

  Event "1" --> "0..*" EventQuestSelection : selects
  EventQuestSelection "0..*" --> "1" QuestTemplate
  Event "0..1" --> "0..*" UserQuest : scopes

  User "1" --> "0..*" Notification : receives
  User "1" --> "0..*" Event : creates

  User "1" --> "0..*" Inventory : owns
  Item "1" --> "0..*" Inventory : granted

  MonsterTemplate "1" --> "0..*" MonsterSequenceStep : in sequence
  MonsterTemplate "1" --> "0..*" UserMonster : spawns
  User "1" --> "0..*" UserMonster : fights

  User "1" --> "0..*" UserAchievement : unlocks
  Achievement "1" --> "0..*" UserAchievement : catalog

  User "1" --> "0..*" ShopPurchase : buys
  Item "1" --> "0..*" ShopPurchase : purchased

  Category "0..1" --> "0..*" Habit : classifies
  User "1" --> "0..*" Habit : legacy
  Habit "1" --> "0..*" HabitLog : logs
